[package]
name = "cumulus-primitives-aura"
version = "0.15.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Core primitives for Aura in Cumulus (polkadot v1.15.0)"

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
sp-api.workspace = true
sp-consensus-aura.workspace = true
sp-runtime.workspace = true
polkadot-core-primitives.workspace = true
polkadot-primitives.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"polkadot-core-primitives/std",
	"polkadot-primitives/std",
	"sp-api/std",
	"sp-consensus-aura/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"polkadot-core-primitives/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-consensus-aura/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks"
]
try-runtime = [
	"polkadot-core-primitives/try-runtime",
	"polkadot-primitives/try-runtime",
	"sp-api/try-runtime",
	"sp-consensus-aura/try-runtime",
	"sp-runtime/try-runtime"
]
