[package]
name = "cumulus-primitives-proof-size-hostfunction"
version = "0.10.0"
authors.workspace = true
edition.workspace = true
description = "Hostfunction exposing storage proof size to the runtime. (polkadot v1.15.0)"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
sp-runtime-interface.workspace = true
sp-externalities.workspace = true
sp-trie.workspace = true

[dev-dependencies]
sp-state-machine = { default-features = true, path = "../../../substrate/primitives/state-machine" }
sp-core = { default-features = true, path = "../../../substrate/primitives/core" }
sp-io = { default-features = true, path = "../../../substrate/primitives/io" }

[features]
default = ["std"]
std = ["sp-externalities/std", "sp-runtime-interface/std", "sp-trie/std"]
runtime-benchmarks = [
	"sp-io/runtime-benchmarks",
	"sp-runtime-interface/runtime-benchmarks",
	"sp-state-machine/runtime-benchmarks",
	"sp-trie/runtime-benchmarks",
	"sp-core/runtime-benchmarks"
]
try-runtime = [
	"sp-io/try-runtime",
	"sp-runtime-interface/try-runtime",
	"sp-state-machine/try-runtime",
	"sp-trie/try-runtime",
	"sp-core/try-runtime"
]
