[package]
name = "cumulus-primitives-timestamp"
version = "0.15.1"
authors.workspace = true
edition.workspace = true
description = "Provides timestamp related functionality for parachains. (polkadot v1.15.0)"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
sp-inherents.workspace = true
sp-timestamp.workspace = true
cumulus-primitives-core.workspace = true

[features]
default = ["std"]
std = [
	"cumulus-primitives-core/std",
	"sp-inherents/std",
	"sp-timestamp/std",
]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"sp-inherents/runtime-benchmarks",
	"sp-timestamp/runtime-benchmarks"
]
try-runtime = [
	"cumulus-primitives-core/try-runtime",
	"sp-inherents/try-runtime",
	"sp-timestamp/try-runtime"
]
