[package]
name = "cumulus-test-client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false
description = "cumulus-test-client (polkadot v1.15.0)"

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
sc-service.workspace = true
sc-service.default-features = true
sc-consensus.workspace = true
sc-consensus.default-features = true
sc-consensus-aura.workspace = true
sc-consensus-aura.default-features = true
sc-block-builder.workspace = true
sc-block-builder.default-features = true
sc-executor.workspace = true
sc-executor.default-features = true
sc-executor-common.workspace = true
sc-executor-common.default-features = true
substrate-test-client.workspace = true
sp-application-crypto.workspace = true
sp-application-crypto.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-keyring.workspace = true
sp-keyring.default-features = true
sp-keystore.workspace = true
sp-keystore.default-features = true
sp-consensus-aura.workspace = true
sp-consensus-aura.default-features = true
sp-blockchain.workspace = true
sp-blockchain.default-features = true
sp-inherents.workspace = true
sp-inherents.default-features = true
sp-io.workspace = true
sp-io.default-features = true
sp-timestamp.workspace = true
sp-timestamp.default-features = true
frame-system.workspace = true
frame-system.default-features = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment.default-features = true
pallet-balances.workspace = true
pallet-balances.default-features = true
polkadot-primitives.workspace = true
polkadot-primitives.default-features = true
polkadot-parachain-primitives.workspace = true
polkadot-parachain-primitives.default-features = true
cumulus-test-runtime.workspace = true
cumulus-test-service.workspace = true
cumulus-test-relay-sproof-builder.workspace = true
cumulus-test-relay-sproof-builder.default-features = true
cumulus-primitives-core.workspace = true
cumulus-primitives-core.default-features = true
cumulus-primitives-proof-size-hostfunction.workspace = true
cumulus-primitives-proof-size-hostfunction.default-features = true
cumulus-primitives-parachain-inherent.workspace = true
cumulus-primitives-parachain-inherent.default-features = true
cumulus-primitives-storage-weight-reclaim.workspace = true
cumulus-primitives-storage-weight-reclaim.default-features = true

[features]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-test-service/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"cumulus-primitives-parachain-inherent/runtime-benchmarks",
	"cumulus-primitives-storage-weight-reclaim/runtime-benchmarks",
	"cumulus-test-relay-sproof-builder/runtime-benchmarks",
	"cumulus-test-runtime/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"sc-block-builder/runtime-benchmarks",
	"sc-consensus/runtime-benchmarks",
	"sc-consensus-aura/runtime-benchmarks",
	"sc-executor/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-blockchain/runtime-benchmarks",
	"sp-consensus-aura/runtime-benchmarks",
	"sp-inherents/runtime-benchmarks",
	"sp-keyring/runtime-benchmarks",
	"sp-timestamp/runtime-benchmarks",
	"substrate-test-client/runtime-benchmarks",
	"cumulus-primitives-proof-size-hostfunction/runtime-benchmarks",
	"sp-io/runtime-benchmarks",
	"sp-application-crypto/runtime-benchmarks",
	"sp-core/runtime-benchmarks",
	"sp-keystore/runtime-benchmarks",
	"sc-executor-common/runtime-benchmarks"
]
std = [
	"cumulus-test-service/std",
	"codec/std",
	"sc-block-builder/std",
	"sc-consensus/std",
	"sc-consensus-aura/std",
	"sc-executor-common/std",
	"sc-service/std",
	"sp-blockchain/std",
	"substrate-test-client/std"
]
try-runtime = [
	"cumulus-primitives-core/try-runtime",
	"cumulus-primitives-parachain-inherent/try-runtime",
	"cumulus-primitives-storage-weight-reclaim/try-runtime",
	"cumulus-test-relay-sproof-builder/try-runtime",
	"cumulus-test-runtime/try-runtime",
	"cumulus-test-service/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"polkadot-parachain-primitives/try-runtime",
	"polkadot-primitives/try-runtime",
	"sc-block-builder/try-runtime",
	"sc-consensus/try-runtime",
	"sc-consensus-aura/try-runtime",
	"sc-executor/try-runtime",
	"sc-service/try-runtime",
	"sp-api/try-runtime",
	"sp-blockchain/try-runtime",
	"sp-consensus-aura/try-runtime",
	"sp-inherents/try-runtime",
	"sp-keyring/try-runtime",
	"sp-runtime/try-runtime",
	"sp-timestamp/try-runtime",
	"substrate-test-client/try-runtime",
	"cumulus-primitives-proof-size-hostfunction/try-runtime",
	"sp-io/try-runtime",
	"sp-application-crypto/try-runtime",
	"sp-core/try-runtime",
	"sp-keystore/try-runtime",
	"sc-executor-common/try-runtime"
]
