[package]
name = "cumulus-test-relay-sproof-builder"
version = "0.15.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Mocked relay state proof builder for testing Cumulus. (polkadot v1.15.0)"

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
sp-runtime.workspace = true
sp-state-machine.workspace = true
sp-trie.workspace = true
polkadot-primitives.workspace = true
cumulus-primitives-core.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"cumulus-primitives-core/std",
	"polkadot-primitives/std",
	"sp-runtime/std",
	"sp-state-machine/std",
	"sp-trie/std",
]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-state-machine/runtime-benchmarks",
	"sp-trie/runtime-benchmarks"
]
try-runtime = [
	"cumulus-primitives-core/try-runtime",
	"polkadot-primitives/try-runtime",
	"sp-runtime/try-runtime",
	"sp-state-machine/try-runtime",
	"sp-trie/try-runtime"
]
