[package]
name = "cumulus-test-service"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false
description = "cumulus-test-service (polkadot v1.15.0)"

[lints]
workspace = true

[[bin]]
name = "test-parachain"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
clap = { features = ["derive"], workspace = true }
codec = { workspace = true, default-features = true }
criterion = { features = ["async_tokio"], workspace = true, default-features = true }
jsonrpsee = { features = ["server"], workspace = true }
rand = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
tokio = { features = ["macros"], workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }
url = { workspace = true }
tempfile = { workspace = true }
frame-system.workspace = true
frame-system.default-features = true
frame-system-rpc-runtime-api.workspace = true
frame-system-rpc-runtime-api.default-features = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment.default-features = true
sc-basic-authorship.workspace = true
sc-basic-authorship.default-features = true
sc-chain-spec.workspace = true
sc-chain-spec.default-features = true
sc-client-api.workspace = true
sc-client-api.default-features = true
sc-consensus.workspace = true
sc-consensus.default-features = true
sc-consensus-aura.workspace = true
sc-consensus-aura.default-features = true
sc-executor.workspace = true
sc-executor.default-features = true
sc-network.workspace = true
sc-network.default-features = true
sc-service.workspace = true
sc-service.default-features = true
sc-tracing.workspace = true
sc-tracing.default-features = true
sc-transaction-pool.workspace = true
sc-transaction-pool.default-features = true
sc-transaction-pool-api.workspace = true
sc-transaction-pool-api.default-features = true
sc-telemetry.workspace = true
sc-telemetry.default-features = true
sp-arithmetic.workspace = true
sp-arithmetic.default-features = true
sp-blockchain.workspace = true
sp-blockchain.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-io.workspace = true
sp-io.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-keyring.workspace = true
sp-keyring.default-features = true
sp-runtime.workspace = true
sp-state-machine.workspace = true
sp-state-machine.default-features = true
sp-tracing.workspace = true
sp-tracing.default-features = true
sp-timestamp.workspace = true
sp-timestamp.default-features = true
sp-consensus.workspace = true
sp-consensus.default-features = true
sp-consensus-aura.workspace = true
sp-consensus-aura.default-features = true
substrate-test-client.workspace = true
sc-cli.workspace = true
sc-cli.default-features = true
sc-block-builder.workspace = true
sc-block-builder.default-features = true
sc-executor-wasmtime.workspace = true
sc-executor-wasmtime.default-features = true
sc-executor-common.workspace = true
sc-executor-common.default-features = true
polkadot-primitives.workspace = true
polkadot-primitives.default-features = true
polkadot-service.workspace = true
polkadot-service.default-features = true
polkadot-test-service.workspace = true
polkadot-cli.workspace = true
polkadot-cli.default-features = true
polkadot-node-subsystem.workspace = true
polkadot-node-subsystem.default-features = true
polkadot-overseer.workspace = true
polkadot-overseer.default-features = true
cumulus-client-cli.workspace = true
cumulus-client-cli.default-features = true
parachains-common.workspace = true
parachains-common.default-features = true
cumulus-client-consensus-common.workspace = true
cumulus-client-consensus-common.default-features = true
cumulus-client-consensus-proposer.workspace = true
cumulus-client-consensus-proposer.default-features = true
cumulus-client-consensus-aura.workspace = true
cumulus-client-consensus-aura.default-features = true
cumulus-client-consensus-relay-chain.workspace = true
cumulus-client-consensus-relay-chain.default-features = true
cumulus-client-parachain-inherent.workspace = true
cumulus-client-parachain-inherent.default-features = true
cumulus-client-service.workspace = true
cumulus-client-service.default-features = true
cumulus-client-collator.workspace = true
cumulus-client-collator.default-features = true
cumulus-primitives-core.workspace = true
cumulus-primitives-core.default-features = true
cumulus-relay-chain-inprocess-interface.workspace = true
cumulus-relay-chain-inprocess-interface.default-features = true
cumulus-relay-chain-interface.workspace = true
cumulus-relay-chain-interface.default-features = true
cumulus-test-runtime.workspace = true
cumulus-relay-chain-minimal-node.workspace = true
cumulus-relay-chain-minimal-node.default-features = true
cumulus-client-pov-recovery.workspace = true
cumulus-client-pov-recovery.default-features = true
cumulus-test-relay-sproof-builder.workspace = true
cumulus-test-relay-sproof-builder.default-features = true
cumulus-pallet-parachain-system.workspace = true
cumulus-primitives-storage-weight-reclaim.workspace = true
cumulus-primitives-storage-weight-reclaim.default-features = true
pallet-timestamp.workspace = true
pallet-timestamp.default-features = true

[dev-dependencies]
futures = { workspace = true }
portpicker = { workspace = true }
sp-authority-discovery = { default-features = true, path = "../../../substrate/primitives/authority-discovery" }
cumulus-test-client = { path = "../client" }

# Polkadot dependencies
polkadot-test-service = { path = "../../../polkadot/node/test/service" }

# Substrate dependencies
sc-cli = { default-features = true, path = "../../../substrate/client/cli" }
substrate-test-utils = { path = "../../../substrate/test-utils" }

[features]
runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"polkadot-service/runtime-benchmarks",
	"polkadot-test-service/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"cumulus-test-client/runtime-benchmarks",
	"cumulus-client-cli/runtime-benchmarks",
	"cumulus-client-collator/runtime-benchmarks",
	"cumulus-client-consensus-aura/runtime-benchmarks",
	"cumulus-client-consensus-common/runtime-benchmarks",
	"cumulus-client-consensus-proposer/runtime-benchmarks",
	"cumulus-client-consensus-relay-chain/runtime-benchmarks",
	"cumulus-client-parachain-inherent/runtime-benchmarks",
	"cumulus-client-pov-recovery/runtime-benchmarks",
	"cumulus-client-service/runtime-benchmarks",
	"cumulus-primitives-storage-weight-reclaim/runtime-benchmarks",
	"cumulus-relay-chain-inprocess-interface/runtime-benchmarks",
	"cumulus-relay-chain-interface/runtime-benchmarks",
	"cumulus-relay-chain-minimal-node/runtime-benchmarks",
	"cumulus-test-relay-sproof-builder/runtime-benchmarks",
	"cumulus-test-runtime/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"polkadot-overseer/runtime-benchmarks",
	"sc-basic-authorship/runtime-benchmarks",
	"sc-block-builder/runtime-benchmarks",
	"sc-chain-spec/runtime-benchmarks",
	"sc-cli/runtime-benchmarks",
	"sc-client-api/runtime-benchmarks",
	"sc-consensus/runtime-benchmarks",
	"sc-consensus-aura/runtime-benchmarks",
	"sc-executor/runtime-benchmarks",
	"sc-network/runtime-benchmarks",
	"sc-tracing/runtime-benchmarks",
	"sc-transaction-pool/runtime-benchmarks",
	"sc-transaction-pool-api/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-authority-discovery/runtime-benchmarks",
	"sp-blockchain/runtime-benchmarks",
	"sp-consensus/runtime-benchmarks",
	"sp-consensus-aura/runtime-benchmarks",
	"sp-keyring/runtime-benchmarks",
	"sp-state-machine/runtime-benchmarks",
	"sp-timestamp/runtime-benchmarks",
	"substrate-test-client/runtime-benchmarks",
	"substrate-test-utils/runtime-benchmarks",
	"frame-system-rpc-runtime-api/runtime-benchmarks",
	"polkadot-node-subsystem/runtime-benchmarks",
	"sc-executor-wasmtime/runtime-benchmarks",
	"sc-telemetry/runtime-benchmarks",
	"sp-io/runtime-benchmarks",
	"sp-core/runtime-benchmarks",
	"sc-executor-common/runtime-benchmarks"
]
std = [
	"cumulus-client-cli/std",
	"cumulus-client-collator/std",
	"cumulus-client-consensus-aura/std",
	"cumulus-client-consensus-common/std",
	"cumulus-client-consensus-proposer/std",
	"cumulus-client-consensus-relay-chain/std",
	"cumulus-client-parachain-inherent/std",
	"cumulus-client-pov-recovery/std",
	"cumulus-client-service/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-relay-chain-inprocess-interface/std",
	"cumulus-relay-chain-interface/std",
	"cumulus-relay-chain-minimal-node/std",
	"cumulus-test-client/std",
	"polkadot-cli/std",
	"polkadot-overseer/std",
	"polkadot-service/std",
	"polkadot-test-service/std",
	"sc-basic-authorship/std",
	"sc-block-builder/std",
	"sc-chain-spec/std",
	"sc-cli/std",
	"sc-client-api/std",
	"sc-consensus/std",
	"sc-consensus-aura/std",
	"sc-executor-common/std",
	"sc-executor-wasmtime/std",
	"sc-network/std",
	"sc-service/std",
	"sc-telemetry/std",
	"sc-tracing/std",
	"sc-transaction-pool/std",
	"sc-transaction-pool-api/std",
	"sp-blockchain/std",
	"sp-consensus/std",
	"sp-runtime/std",
	"substrate-test-client/std",
	"substrate-test-utils/std",
	"polkadot-node-subsystem/std"
]
try-runtime = [
	"cumulus-client-cli/try-runtime",
	"cumulus-client-collator/try-runtime",
	"cumulus-client-consensus-aura/try-runtime",
	"cumulus-client-consensus-common/try-runtime",
	"cumulus-client-consensus-proposer/try-runtime",
	"cumulus-client-consensus-relay-chain/try-runtime",
	"cumulus-client-parachain-inherent/try-runtime",
	"cumulus-client-pov-recovery/try-runtime",
	"cumulus-client-service/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-primitives-core/try-runtime",
	"cumulus-primitives-storage-weight-reclaim/try-runtime",
	"cumulus-relay-chain-inprocess-interface/try-runtime",
	"cumulus-relay-chain-minimal-node/try-runtime",
	"cumulus-test-client/try-runtime",
	"cumulus-test-relay-sproof-builder/try-runtime",
	"cumulus-test-runtime/try-runtime",
	"frame-system/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"parachains-common/try-runtime",
	"polkadot-cli/try-runtime",
	"polkadot-primitives/try-runtime",
	"polkadot-service/try-runtime",
	"polkadot-test-service/try-runtime",
	"sc-basic-authorship/try-runtime",
	"sc-block-builder/try-runtime",
	"sc-chain-spec/try-runtime",
	"sc-cli/try-runtime",
	"sc-client-api/try-runtime",
	"sc-consensus/try-runtime",
	"sc-consensus-aura/try-runtime",
	"sc-executor/try-runtime",
	"sc-network/try-runtime",
	"sc-service/try-runtime",
	"sc-tracing/try-runtime",
	"sc-transaction-pool/try-runtime",
	"sc-transaction-pool-api/try-runtime",
	"sp-api/try-runtime",
	"sp-authority-discovery/try-runtime",
	"sp-blockchain/try-runtime",
	"sp-consensus/try-runtime",
	"sp-consensus-aura/try-runtime",
	"sp-keyring/try-runtime",
	"sp-runtime/try-runtime",
	"sp-state-machine/try-runtime",
	"sp-timestamp/try-runtime",
	"substrate-test-client/try-runtime",
	"cumulus-relay-chain-interface/try-runtime",
	"frame-system-rpc-runtime-api/try-runtime",
	"polkadot-node-subsystem/try-runtime",
	"polkadot-overseer/try-runtime",
	"sc-executor-wasmtime/try-runtime",
	"sc-telemetry/try-runtime",
	"sp-io/try-runtime",
	"substrate-test-utils/try-runtime",
	"sp-core/try-runtime",
	"sc-executor-common/try-runtime"
]

[[bench]]
name = "transaction_throughput"
harness = false

[[bench]]
name = "block_import"
harness = false

[[bench]]
name = "block_production"
harness = false

[[bench]]
name = "block_production_glutton"
harness = false

[[bench]]
name = "block_import_glutton"
harness = false

[[bench]]
name = "validate_block"
harness = false

[[bench]]
name = "validate_block_glutton"
harness = false
