[package]
name = "xcm-emulator"
description = "Test kit to emulate XCM program execution. (polkadot v1.15.0)"
version = "0.15.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
codec = { workspace = true, default-features = true }
paste = { workspace = true, default-features = true }
log = { workspace = true }
lazy_static = { workspace = true }
impl-trait-for-tuples = { workspace = true }
frame-support.workspace = true
frame-support.default-features = true
frame-system.workspace = true
frame-system.default-features = true
sp-io.workspace = true
sp-io.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-crypto-hashing.workspace = true
sp-crypto-hashing.default-features = true
sp-std.workspace = true
sp-std.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-arithmetic.workspace = true
sp-arithmetic.default-features = true
sp-tracing.workspace = true
sp-tracing.default-features = true
pallet-balances.workspace = true
pallet-balances.default-features = true
pallet-message-queue.workspace = true
pallet-message-queue.default-features = true
cumulus-primitives-core.workspace = true
cumulus-primitives-core.default-features = true
cumulus-pallet-xcmp-queue.workspace = true
cumulus-pallet-xcmp-queue.default-features = true
cumulus-pallet-parachain-system.workspace = true
cumulus-pallet-parachain-system.default-features = true
cumulus-primitives-parachain-inherent.workspace = true
cumulus-primitives-parachain-inherent.default-features = true
cumulus-test-relay-sproof-builder.workspace = true
cumulus-test-relay-sproof-builder.default-features = true
parachains-common.workspace = true
parachains-common.default-features = true
xcm.workspace = true
xcm.default-features = true
xcm-executor.workspace = true
xcm-executor.default-features = true
polkadot-primitives.workspace = true
polkadot-primitives.default-features = true
polkadot-parachain-primitives.workspace = true
polkadot-parachain-primitives.default-features = true
polkadot-runtime-parachains.workspace = true
polkadot-runtime-parachains.default-features = true

[features]
std = [
	"log/std"
]
runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-primitives-parachain-inherent/runtime-benchmarks",
	"cumulus-test-relay-sproof-builder/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"polkadot-runtime-parachains/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"sp-io/runtime-benchmarks",
	"sp-core/runtime-benchmarks",
	"xcm/runtime-benchmarks"
]
try-runtime = [
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"cumulus-primitives-core/try-runtime",
	"cumulus-primitives-parachain-inherent/try-runtime",
	"cumulus-test-relay-sproof-builder/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-message-queue/try-runtime",
	"parachains-common/try-runtime",
	"polkadot-parachain-primitives/try-runtime",
	"polkadot-primitives/try-runtime",
	"polkadot-runtime-parachains/try-runtime",
	"sp-runtime/try-runtime",
	"xcm-executor/try-runtime",
	"sp-io/try-runtime",
	"sp-core/try-runtime",
	"xcm/try-runtime"
]
